Trying some stuff, still not working

--- a/www/templates/activity_feed.html
+++ b/www/templates/activity_feed.html
@@ -1,5 +1,5 @@
-<ion-view title="Historical Data">
+<ion-modal-view view-title='Quiz Page'>
   <ion-content>
     Activity feed page.
   </ion-content>
-</ion-view>
+</ion-modal-view>
