--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -1,5 +1,7 @@
 <ion-view>
-  <ion-content>
-    {{message}}
+  <ion-content class="padding">
+    <div class="list list-inset">
+      {{message}}
+    </div>
   </ion-content>
 </ion-view>
