--- a/www/templates/create_activity.html
+++ b/www/templates/create_activity.html
@@ -9,18 +9,21 @@
       </label>
       <label class="item item-input">Difficulty</label>
       <div class="item range">
-        <input type="range" id="difficulty" ng-model="activityData.difficulty" min="1" max="3" value="1">
+        <!-- How can I set this range to an initial value? It picks it up if I move it but I can't get it to say "2" is the default" -->
+        <input type="range" id="difficulty" ng-model="activityData.difficulty" min="1" max="3" value="1" >
       </div>
       <div class="list">
         <label class="item item-input item-select">
           <div class="input-label">
             Category
           </div>
-          <select>
+          <select ng-model="activityData.category">
             <option ng-repeat="category in categories">{{category}}</option>
           </select>
         </label>
-
+        <div>
+          <button class='button button-block button-positive' ng-click="createActivity()">Create</button>
+        </div>
       </div>
     </div>
   </ion-content>
@@ -28,8 +31,8 @@
 
 <script>
   // I thought it would be a nice touch if the selector here started green, then went yellow, then red, depending on which value was selected but I can't seem to add the event listener and maybe Angular wants you to do that in a directive and it all just seems like too much work right now.
-  difficulty = angular.element(document.querySelector('#difficulty'));
-  difficulty.addEventListener('change', function () {
-    console.log('thing');
-  })
+//  difficulty = angular.element(document.querySelector('#difficulty'));
+//  difficulty.addEventListener('change', function () {
+//    console.log('thing');
+//  })
 </script>
