--- a/www/templates/create_activity.html
+++ b/www/templates/create_activity.html
@@ -7,10 +7,10 @@
       <label class="item item-input textarea">
         <textarea placeholder="Describe the activity" ng-model="activityData.body"></textarea>
       </label>
-      <label class="item item-input">Difficulty</label>
+      <label class="item item-input">Difficulty {{activityData.difficulty}}</label>
       <div class="item range">
         <!-- How can I set this range to an initial value? It picks it up if I move it but I can't get it to say "2" is the default" -->
-        <input type="range" id="difficulty" ng-model="activityData.difficulty" min="1" max="3" value="1" >
+        <input type="range" id="difficulty" ng-model="activityData.difficulty" ng-init="activityData.difficulty = 1" min="1" max="3" value="1" >
       </div>
       <div class="list">
         <label class="item item-input item-select">
