--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -8,21 +8,25 @@
 
     <div class="list card" ng-repeat="activity in activities">
 
-      <div class="item item-avatar">
-        <img src="activity.image">
-        <h2>{{activity.title}}</h2>
-        <!--<p>November 05, 1955</p>-->
+      <div class="item item-avatar gray">
+        <!--<img src={{activity.user.image}}>-->
+        <img src="../img/dummy_images/amber.jpg">
+        <h2 class="activity_title">{{activity.user.name}}</h2>
+        <p ng-repeat="interest in activity.user.interests">{{interest}}</p>
+        <p>{{activity.created_at}}</p>
       </div>
 
-      <div class="item item-body">
-        <img class="full-image" src="delorean.jpg">
+      <div class="item item-body gray">
+          <span>{{activity.category}}</span>, <span>{{activity.difficulty}}</span>
+        <!--<img class="full-image" src={{activity.images[0]}}>-->
+        <img class="full-image" src='../img/dummy_images/snow.jpg'>
+        <h3>{{activity.title}}</h3>
         <p>
           {{activity.body}}
         </p>
-        <p>
-          <!--<a href="#" class="subdued">1 Like</a>-->
-          <!--<a href="#" class="subdued">5 Comments</a>-->
-        </p>
+        <div>
+          <!-- in here put the icons -->
+        </div>
       </div>
 
     </div>
