Import ionicons library

--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -26,6 +26,7 @@
         </p>
         <div>
           <!-- in here put the icons -->
+          <i class="icon ion-chatboxes"></i>
         </div>
       </div>
 
