CSS formatting on activity feed

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -23,3 +23,26 @@
 .gray {
   background-color: #cccccc;
 }
+
+.card-bottom {
+  font-size: 170%;
+}
+
+.centered {
+  text-align: center;
+}
+
+.item-inner {
+  margin: 0px;
+  padding: 0px;
+  border: solid #000000;
+  border-width: 1px 1px 1px 1px;
+}
+
+.padding {
+  padding: 10px;
+}
+
+.row {
+  margin-top: 10px;
+}
