--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -19,14 +19,32 @@
       <div class="item item-body gray">
           <span>{{activity.category}}</span>, <span>{{activity.difficulty}}</span>
         <!--<img class="full-image" src={{activity.images[0]}}>-->
-        <img class="full-image" src='../img/dummy_images/snow.jpg'>
-        <h3>{{activity.title}}</h3>
-        <p>
-          {{activity.body}}
-        </p>
-        <div>
-          <!-- in here put the icons -->
-          <i class="icon ion-chatboxes"></i>
+        <div class="item gray card item-inner">
+          <img class="full-image" src='../img/dummy_images/snow.jpg'>
+          <div class="padding">
+            <h3>{{activity.title}}</h3>
+            <p>
+              {{activity.body}}
+            </p>
+          </div>
+        </div>
+        <div class='row centered'>
+          <div class='col'>
+            <i class="icon ion-thumbsup card-bottom"></i>
+            <p>Interested</p>
+          </div>
+          <div class='col'>
+            <i class="icon ion-android-star-outline card-bottom"></i>
+            <p>Recommend</p>
+          </div>
+          <div class='col'>
+            <i class="icon ion-person card-bottom"></i>
+            <p>Follow</p>
+          </div>
+          <div class='col'>
+            <i class="icon ion-chatboxes card-bottom"></i>
+            <p>Comments</p>
+          </div>
         </div>
       </div>
 
