--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -10,7 +10,7 @@
 
       <div class="item item-avatar gray">
         <!--<img src={{activity.user.image}}>-->
-        <img ng-src="{{activity.user.image ? activity.user.image : '../img/dummy_images/empty_image.svg'}}">
+        <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
         <h2 class="activity_title">{{activity.user.name}}</h2>
         <p ng-repeat="interest in activity.user.interests">{{interest}}</p>
         <p>{{activity.created_at}}</p>
@@ -20,7 +20,7 @@
           <span>{{activity.category}}</span>, <span>{{activity.difficulty}}</span>
         <!--<img class="full-image" src={{activity.images[0]}}>-->
         <div class="item gray card item-inner">
-          <img class="full-image" src="../img/dummy_images/snow.jpg">
+          <img class="full-image" src="img/dummy_images/snow.jpg">
           <div class="padding">
             <h3>{{activity.title}}</h3>
             <p>
