--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -1,20 +1,14 @@
 
 <ion-view>
   <ion-nav-title>
-    <img src="logo.svg">
+    Activity Feed
   </ion-nav-title>
-  <ion-nav-buttons side="primary">
+  <ion-nav-buttons side="right">
     <button class="button" ng-click="addActivity()">
-      Create
+      New
     </button>
   </ion-nav-buttons>
   <ion-content class="padding">
-    <div class="list list-inset">
-      <div>
-        <button class='button button-block button-positive' ng-click="addActivity()">Create an Activity</button>
-      </div>
-    </div>
-
     <div class="list card" ng-repeat="activity in activities">
 
       <div class="item item-avatar gray">
