--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -1,18 +1,29 @@
-
 <ion-view>
+<ion-nav-bar class="bar-positive">
   <ion-nav-title>
     Activity Feed
   </ion-nav-title>
-  <ion-nav-buttons side="right">
-    <button class="button" ng-click="addActivity()">
-      New
+  <ion-nav-buttons side="left">
+    <button class="button button-positive" ng-click="toggleFilters()">
+    <!--<button class="button button-positive" menu-toggle="left">-->
+      <i class="ion-navicon icon"></i>
     </button>
+
   </ion-nav-buttons>
+  <ion-nav-buttons side="right">
+    <div>
+      <button class="button" ng-click="addActivity()">
+        New
+      </button>
+    </div>
+  </ion-nav-buttons>
+
+</ion-nav-bar>
   <ion-content class="padding">
+
     <div class="list card" ng-repeat="activity in activities">
 
       <div class="item item-avatar gray">
-        <!--<img src={{activity.user.image}}>-->
         <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
         <h2 class="activity_title">{{activity.user.name}}</h2>
         <p ng-repeat="interest in activity.user.interests">{{interest}}</p>
@@ -55,4 +66,30 @@
 
 
   </ion-content>
+  <ion-side-menus enable-menu-with-back-views="false" has-navbar="true" title="Filters" ng-show="showFilters">
+    <ion-side-menu-content>
+    </ion-side-menu-content>
+
+    <ion-side-menu side="left">
+      <ion-header-bar class="bar-stable">
+        <h1 class="title">Left</h1>
+      </ion-header-bar>
+      <ion-content>
+        <ion-list>
+          <ion-item menu-close ng-click="login()">
+            Login
+          </ion-item>
+          <ion-item menu-close href="#/app/search">
+            Search
+          </ion-item>
+          <ion-item menu-close href="#/app/browse">
+            Browse
+          </ion-item>
+          <ion-item menu-close href="#/app/playlists">
+            Playlists
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ion-side-menu>
+  </ion-side-menus>
 </ion-view>
