--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -1,11 +1,11 @@
 <ion-view>
-<ion-nav-bar class="bar-positive">
+  <!--<ion-nav-bar class="bar-positive">-->
   <ion-nav-title>
     Activity Feed
   </ion-nav-title>
   <ion-nav-buttons side="left">
     <button class="button button-positive" ng-click="toggleFilters()">
-    <!--<button class="button button-positive" menu-toggle="left">-->
+      <!--<button class="button button-positive" menu-toggle="left">-->
       <i class="ion-navicon icon"></i>
     </button>
 
@@ -18,7 +18,7 @@
     </div>
   </ion-nav-buttons>
 
-</ion-nav-bar>
+  </ion-nav-bar>
   <ion-content class="padding">
 
     <div class="list card" ng-repeat="activity in activities">
@@ -66,7 +66,8 @@
 
 
   </ion-content>
-  <ion-side-menus enable-menu-with-back-views="false" has-navbar="true" title="Filters" ng-show="showFilters">
+
+  <ion-side-menus ng-show="showFilters" enable-menu-with-back-views="false" has-navbar="true" title="Filters">
     <ion-side-menu-content>
     </ion-side-menu-content>
 
@@ -75,20 +76,34 @@
         <h1 class="title">Left</h1>
       </ion-header-bar>
       <ion-content>
-        <ion-list>
-          <ion-item menu-close ng-click="login()">
-            Login
-          </ion-item>
-          <ion-item menu-close href="#/app/search">
-            Search
-          </ion-item>
-          <ion-item menu-close href="#/app/browse">
-            Browse
-          </ion-item>
-          <ion-item menu-close href="#/app/playlists">
-            Playlists
-          </ion-item>
-        </ion-list>
+
+        <ul class="list">
+
+          <li class="item item-toggle">
+            Only users I follow
+            <label class="toggle toggle-positive">
+              <input type="checkbox" ng-model="filters.follow">
+              <div class="track">
+                <div class="handle"></div>
+              </div>
+            </label>
+          </li>
+          <div class="list list-inset">
+            <label class="item item-input">
+              <i class="icon ion-search placeholder-icon"></i>
+              <input type="text" placeholder="Change Location" ng-model="filters.location">
+            </label>
+          </div>
+          <div class="list list-inset">
+            <label class="item item-input">Difficulty</label>
+            <ion-list>
+            <ion-checkbox ng-model="filters.difficulty1">1</ion-checkbox>
+            <ion-checkbox ng-model="filters.difficulty2">2</ion-checkbox>
+            <ion-checkbox ng-model="filters.difficulty3">3</ion-checkbox>
+            </ion-list>
+          </div>
+        </ul>
+        <button class="button button-block button-positive" ng-click="setFilters()">Filter</button>
       </ion-content>
     </ion-side-menu>
   </ion-side-menus>
