--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -97,9 +97,24 @@
           <div class="list list-inset">
             <label class="item item-input">Difficulty</label>
             <ion-list>
-            <ion-checkbox ng-model="filters.difficulty1">1</ion-checkbox>
-            <ion-checkbox ng-model="filters.difficulty2">2</ion-checkbox>
-            <ion-checkbox ng-model="filters.difficulty3">3</ion-checkbox>
+              <ion-checkbox ng-model="filters.difficulty1">1</ion-checkbox>
+              <ion-checkbox ng-model="filters.difficulty2">2</ion-checkbox>
+              <ion-checkbox ng-model="filters.difficulty3">3</ion-checkbox>
+            </ion-list>
+          </div>
+          <div class="list list-inset">
+            <label class="item item-input">Sport</label>
+            <ion-list>
+              <ion-checkbox ng-model="filters.sports1">Hiking</ion-checkbox>
+              <ion-checkbox ng-model="filters.sports2">Cross-country skiing</ion-checkbox>
+              <ion-checkbox ng-model="filters.sports3">Back country skiing</ion-checkbox>
+              <ion-checkbox ng-model="filters.sports4">Paddling</ion-checkbox>
+              <ion-checkbox ng-model="filters.sports5">Mountain biking</ion-checkbox>
+              <ion-checkbox ng-model="filters.sports6">Horse riding</ion-checkbox>
+              <ion-checkbox ng-model="filters.sports7">Climbing</ion-checkbox>
+              <ion-checkbox ng-model="filters.sports8">Snow mobiling</ion-checkbox>
+              <ion-checkbox ng-model="filters.sports9">Cross country ice skating</ion-checkbox>
+              <ion-checkbox ng-model="filters.sports10">Foraging</ion-checkbox>
             </ion-list>
           </div>
         </ul>
