fixes navigation issues

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -8,14 +8,14 @@
 
   <ion-side-menu side="left">
     <header class="bar bar-header bar-positive">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Menu</h1>
     </header>
     <ion-content class="has-header">
       <ion-list>
         <ion-item menu-close ng-if="user.email" ng-controller="activitiesController" ng-click="viewProfile()">
           Profile
         </ion-item>
-        <ion-item menu-close href="#/activites">
+        <ion-item menu-close href="#/app/activities">
           Activity Feed
         </ion-item>
       </ion-list>
