--- a/www/templates/create_activity.html
+++ b/www/templates/create_activity.html
@@ -1,7 +1,9 @@
-<ion-view>
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-  </ion-nav-buttons>
+<ion-view title="Create Activity">
+  <ion-nav-bar class="bar-positive">
+    <ion-nav-back-button class="button-clear">
+
+    </ion-nav-back-button>
+  </ion-nav-bar>
 
   <ion-content class="padding has-header">
     <div class="list list-inset">
