--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -10,47 +10,46 @@
   </ion-nav-buttons>
   <ion-content class="padding has-header">
     <div class="list card" ng-repeat="activity in activities">
-
-      <div class="item item-avatar gray">
-        <!--<img src={{activity.user.image}}>-->
-        <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
-        <h2 class="activity_title">{{activity.user.name}}</h2>
-        <p ng-repeat="interest in activity.user.interests">{{interest}}</p>
-        <p>{{activity.created_at}}</p>
-      </div>
-
-      <div class="item item-body gray">
-        <span>{{activity.category}}</span>, <span>{{activity.difficulty}}</span>
-        <!--<img class="full-image" src={{activity.images[0]}}>-->
-        <div class="item gray card item-inner">
-          <img class="full-image" src="img/dummy_images/snow.jpg">
-          <div class="padding">
-            <h3>{{activity.title}}</h3>
-            <p>
-              {{activity.body}}
-            </p>
+      <div ng-click="showActivity(activity)">
+        <div class="item item-avatar gray">
+          <!--<img src={{activity.user.image}}>-->
+          <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
+          <h2 class="activity_title">{{activity.user.name}}</h2>
+          <p ng-repeat="interest in activity.user.interests">{{interest}}</p>
+          <p>{{activity.created_at}}</p>
+        </div>
+        <div class="item item-body gray">
+          <span>{{activity.category}}</span>, <span>{{activity.difficulty}}</span>
+          <!--<img class="full-image" src={{activity.images[0]}}>-->
+          <div class="item gray card item-inner">
+            <img class="full-image" src="img/dummy_images/snow.jpg">
+            <div class="padding">
+              <h3>{{activity.title}}</h3>
+              <p>
+                {{activity.body}}
+              </p>
+            </div>
+          </div>
+          <div class='row centered'>
+            <div class='col'>
+              <i class="icon ion-thumbsup card-bottom"></i>
+              <p>Interested</p>
+            </div>
+            <div class='col'>
+              <i class="icon ion-android-star-outline card-bottom"></i>
+              <p>Recommend</p>
+            </div>
+            <div class='col'>
+              <i class="icon ion-person card-bottom"></i>
+              <p>Follow</p>
+            </div>
+            <div class='col'>
+              <i class="icon ion-chatboxes card-bottom"></i>
+              <p>Comments</p>
+            </div>
           </div>
         </div>
-        <div class='row centered'>
-          <div class='col'>
-            <i class="icon ion-thumbsup card-bottom"></i>
-            <p>Interested</p>
-          </div>
-          <div class='col'>
-            <i class="icon ion-android-star-outline card-bottom"></i>
-            <p>Recommend</p>
-          </div>
-          <div class='col'>
-            <i class="icon ion-person card-bottom"></i>
-            <p>Follow</p>
-          </div>
-          <div class='col'>
-            <i class="icon ion-chatboxes card-bottom"></i>
-            <p>Comments</p>
-          </div>
-        </div>
       </div>
-
     </div>
 
 
