Stars click the way you'd expect them to

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -33,7 +33,8 @@
                   <div class="handle"></div>
                 </div>
               </label>
-            </div><div></div>
+            </div>
+            <div></div>
             <div class="list">
               <label class="item item-input">
                 <i class="icon ion-search placeholder-icon"></i>
@@ -41,13 +42,26 @@
               </label>
             </div>
             <div class="list">
-              <label class="item item-input">
-              <button class="button-icon"><i class="icon ion-android-star"></i></button>
-              <button class="button-icon"><i class="icon ion-android-star"></i></button>
-              <button class="button-icon"><i class="icon ion-android-star"></i></button>
-              <button class="button-icon"><i class="icon ion-android-star"></i></button>
-              <button class="button-icon"><i class="icon ion-android-star"></i></button>
-              </label>
+              <button class="button-icon" ng-click="toggleStars(1)">
+                <i id="star1"
+                   ng-class="star1 ? 'icon ion-android-star': 'icon ion-android-star-outline'"></i>
+              </button>
+              <button class="button-icon" ng-click="toggleStars(2)">
+                <i id="star2"
+                   ng-class="star2 ? 'icon ion-android-star': 'icon ion-android-star-outline'"></i>
+              </button>
+              <button class="button-icon" ng-click="toggleStars(3)">
+                <i id="star3"
+                   ng-class="star3 ? 'icon ion-android-star': 'icon ion-android-star-outline'"></i>
+              </button>
+              <button class="button-icon" ng-click="toggleStars(4)">
+                <i id="star4"
+                   ng-class="star4 ? 'icon ion-android-star': 'icon ion-android-star-outline'"></i>
+              </button>
+              <button class="button-icon" ng-click="toggleStars(5)">
+                <i id="star5"
+                   ng-class="star5 ? 'icon ion-android-star': 'icon ion-android-star-outline'"></i>
+              </button>
             </div>
             <div class="list">
               <label class="item item-input">Difficulty</label>
