--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -5,9 +5,9 @@
 
   <ion-nav-buttons side="right">
     <div>
-      <button class="button" ng-click="addActivity()">
+      <a class="button" href="#/app/create_activity">
         New
-      </button>
+      </a>
     </div>
   </ion-nav-buttons>
   <ion-content class="padding has-header">
