adds view for single activity locks down version of angular-resource

--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -10,7 +10,7 @@
   </ion-nav-buttons>
   <ion-content class="padding has-header">
     <div class="list card" ng-repeat="activity in activities">
-      <div ng-click="showActivity(activity)">
+      <div ng-click="openModal(activity)">
         <div class="item item-avatar gray">
           <!--<img src={{activity.user.image}}>-->
           <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
