--- a/www/css/style.css
+++ b/www/css/style.css
@@ -74,3 +74,29 @@
   font-size: x-large !important;
   font-weight: normal !important;
 }
+
+/*modal animation*/
+.zoom-from-center {
+  -webkit-transform: translate3d(0, 0, 0) scale(0);
+  transform: translate3d(0, 0, 0) scale(0);
+  opacity: 0;
+}
+
+.zoom-from-center.ng-enter, .zoom-from-center > .ng-enter {
+  -webkit-transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 600ms;
+  transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 600ms;
+}
+
+.zoom-from-center.ng-enter-active, .zoom-from-center > .ng-enter-active {
+  -webkit-transform: translate3d(0, 0, 0) scale(1);
+  transform: translate3d(0, 0, 0) scale(1);
+  opacity: 1;
+}
+
+.zoom-from-center.ng-leave, .zoom-from-center > .ng-leave {
+  -webkit-transition: all ease-in-out 250ms;
+  transition: all ease-in-out 250ms;
+}
+
+
+/*end modal animation*/
