--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -1,12 +1,10 @@
 <ion-modal-view>
   <ion-header-bar class="bar-positive">
     <h1 class="title">{{ activity.title }}</h1>
-  </ion-header-bar>
-  <ion-nav-buttons side="right">
     <button class="button" ng-click="closeModal()">
-      New
+      Close
     </button>
-  </ion-nav-buttons>
+  </ion-header-bar>
   <ion-content class="padding has-header">
     <div class="list card">
       <div class="item item-avatar gray">
@@ -18,7 +16,6 @@
       </div>
       <div class="item item-body gray">
         <span>{{activity.category}}</span>, <span>{{activity.difficulty}}</span>
-        <!--<img class="full-image" src={{activity.images[0]}}>-->
         <div class="item gray card item-inner">
           <img class="full-image" src="img/dummy_images/snow.jpg">
           <div class="padding">
@@ -48,7 +45,5 @@
         </div>
       </div>
     </div>
-
-
   </ion-content>
 </ion-modal-view>
