--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -23,7 +23,7 @@
         <div class="item item-body gray">
           <span>{{activity.category}}</span>, <span>{{activity.difficulty}}</span>
           <div class="item gray card item-inner">
-            <img class="full-image" src="img/dummy_images/snow.jpg">
+            <display-first-image></display-first-image>
             <div class="padding">
               <h3>{{activity.title}}</h3>
               <p>
