Filter activities by difficulty, not changing activity feed display

--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -11,6 +11,10 @@
     </div>
   </ion-nav-buttons>
   <ion-content class="padding has-header">
+    <div>
+      {{ message }}
+    </div>
+
     <div class="list card" ng-repeat="activity in activities">
 
       <div class="item item-avatar gray">
