--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -11,12 +11,8 @@
     </div>
   </ion-nav-buttons>
   <ion-content class="padding has-header">
-    <div>
-      {{ message.data }}
-      <button ng-click="setFilters()">Set Filters</button>
-    </div>
 
-    <div class="list card" ng-repeat="activity in activities.activityList">
+    <div class="list card" ng-repeat="activity in activityData.activityList">
 
       <div class="item item-avatar gray">
         <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
