--- a/www/css/style.css
+++ b/www/css/style.css
@@ -78,3 +78,11 @@
 .filters {
   transition: all .05s ease-in-out;
 }
+
+/*******************
+MAP
+ *******************/
+#mapid {
+  width: 100%;
+  height: 400px;
+}
