--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -2,5 +2,5 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <div id="mapid"></div>
+  <div id="mapContainer"></div>
 </ion-view>
