--- a/www/css/style.css
+++ b/www/css/style.css
@@ -104,3 +104,31 @@
 
 
 /*end modal animation*/
+
+.mybadge.badge-royal {
+  background-color: #595959;
+  color: #fff;
+}
+
+.mybadge {
+  background-color: transparent;
+  color: #AAAAAA;
+  z-index: 1;
+  display: inline-block;
+  padding: 3px 8px;
+  border-radius: 10px;
+  vertical-align: baseline;
+  text-align: center;
+  white-space: nowrap;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 ;
+  -moz-box-flex: 0;
+  -moz-flex: 0;
+  -ms-flex: 0;
+  flex: 0;
+  display: block;
+  min-width: 24px;
+}
