--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -13,11 +13,13 @@
   <ion-content class="padding has-header">
 
     <div class="list card" ng-repeat="activity in activityData.activityList">
-      <div ng-click="openModal(activity)">
+      <div ng-controller="showActivityController" ng-click="openModal(activity)">
       <div class="item item-avatar gray">
         <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
         <h2 class="activity_title">{{activity.user.name}}</h2>
-        <p ng-repeat="interest in activity.user.interests">{{interest.name}}</p>
+        <p ng-repeat="interest in activity.user.interests">
+          <i class="mybadge badge-royal">{{interest.name}}</i>
+        </p>
         <p>{{activity.created_at}}</p>
       </div>
 
