--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -11,7 +11,9 @@
         <!--<img src={{activity.user.image}}>-->
         <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
         <h2 class="activity_title">{{activity.user.name}}</h2>
-        <p ng-repeat="interest in activity.user.interests">{{interest.name}}</p>
+        <p ng-repeat="interest in activity.user.interests">
+          <i class="mybadge badge-royal">{{interest.name}}</i>
+        </p>
         <p>{{activity.created_at}}</p>
       </div>
       <div class="item item-body gray">
