--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -15,9 +15,9 @@
               <button class="button button-block icon-left ion-social-facebook social-button facebook-button" ng-click="doLogIn()">
                 <span class="inner-text">Log in via Facebook</span>
               </button>
-              <button class="button button-block icon-left ion-social-googleplus social-button google-button" ng-click="doLogIn()">
+              <!--<button class="button button-block icon-left ion-social-googleplus social-button google-button" ng-click="doLogIn()">
                 <span class="inner-text">Log in via Google</span>
-              </button>
+              </button>-->
             </div>
           </div>
           <form class="row form-container" novalidate>
@@ -45,7 +45,7 @@
       </div>
       <div class="row row-no-padding legal-row">
         <div class="col">
-          <p class="legal-text">By logging in your agree to Zomato's <a ui-sref="">Terms of Service</a>, <a ui-sref="">Privacy Policy</a>, <a ui-sref="">Cookie Policy</a> and <a ui-sref="">Content Policies</a></p>
+          <p class="legal-text">By logging in your agree to AdventureMaps's <a ui-sref="">Terms of Service</a>, <a ui-sref="">Privacy Policy</a>, <a ui-sref="">Cookie Policy</a> and <a ui-sref="">Content Policies</a></p>
         </div>
       </div>
     </div>
