--- a/www/templates/auth/signup.html
+++ b/www/templates/auth/signup.html
@@ -15,9 +15,9 @@
               <button class="button button-block icon-left ion-social-facebook social-button facebook-button" ng-click="doSignUp()">
                 <span class="inner-text">Sign up via Facebook</span>
               </button>
-              <button class="button button-block icon-left ion-social-googleplus social-button google-button" ng-click="doSignUp()">
+              <!--<button class="button button-block icon-left ion-social-googleplus social-button google-button" ng-click="doSignUp()">
                 <span class="inner-text">Sign up via Google</span>
-              </button>
+              </button>-->
             </div>
           </div>
           <form class="row form-container" novalidate>
@@ -38,6 +38,10 @@
                   <span class="input-label">Password</span>
                   <input type="password" placeholder="required">
                 </label>
+                <label class="item item-input item-stacked-label">
+                  <span class="input-label">Password Confirmation</span>
+                  <input type="password" placeholder="required">
+                </label>
               </div>
               <button class="button action-button button-block button-balanced" ng-click="doSignUp()">SIGN UP</button>
               <div class="col alt-actions-container">
@@ -50,7 +54,7 @@
       </div>
       <div class="row row-no-padding legal-row">
         <div class="col">
-          <p class="legal-text">By creating an account your agree to Zomato's <a ui-sref="">Terms of Service</a>, <a ui-sref="">Privacy Policy</a>, <a ui-sref="">Cookie Policy</a> and <a ui-sref="">Content Policies</a></p>
+          <p class="legal-text">By creating an account your agree to AdventureMap's <a ui-sref="">Terms of Service</a>, <a ui-sref="">Privacy Policy</a>, <a ui-sref="">Cookie Policy</a> and <a ui-sref="">Content Policies</a></p>
         </div>
       </div>
     </div>
