Create category filter, we need a better solution

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -57,16 +57,16 @@
             <div class="list">
               <label class="item item-input">Sport</label>
               <ion-list>
-                <ion-checkbox ng-model="activityData.filters.sports1">Hiking</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.sports2">Cross-country skiing</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.sports3">Back country skiing</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.sports4">Paddling</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.sports5">Mountain biking</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.sports6">Horse riding</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.sports7">Climbing</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.sports8">Snow mobiling</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.sports9">Cross country ice skating</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.sports10">Foraging</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[1]">Hiking</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[2]">Cross-country skiing</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[3]">Back country skiing</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[4]">Paddling</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[5]">Mountain biking</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[6]">Horse riding</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[7]">Climbing</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[8]">Snow mobiling</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[9]">Cross country ice skating</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[10]">Foraging</ion-checkbox>
               </ion-list>
             </div>
           </ul>
