Filter by difficulty and/or category

--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -14,7 +14,7 @@
 
     <div class="list card" ng-repeat="activity in activityData.activityList">
 
-      <div class="item item-avatar gray">
+      <div class="item item-avatar gray activity-list">
         <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
         <h2 class="activity_title">{{activity.user.name}}</h2>
         <p ng-repeat="interest in activity.user.interests">{{interest}}</p>
