Display no-results message

--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -11,7 +11,9 @@
     </div>
   </ion-nav-buttons>
   <ion-content class="padding has-header">
-
+    <div ng-show="activityData.message">
+      {{activityData.message}}
+    </div>
     <div class="list card" ng-repeat="activity in activityData.activityList">
 
       <div class="item item-avatar gray activity-list">
@@ -53,6 +55,7 @@
       </div>
 
     </div>
+
 
 
   </ion-content>
