--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -1,4 +1,4 @@
-<ion-view class="login-view auth-view" cache-view="false">
+<ion-view class="login-view auth-view" cache-view="false" hide-nav-bar="true">
   <ion-header-bar class="login-header auth-header">
     <div class="buttons">
       <button class="button button-clear button-icon icon ion-ios-close-empty cancel-button" ng-click="cancelAuth()">
@@ -12,7 +12,8 @@
         <div class="col">
           <div class="row social-buttons-row">
             <div class="col">
-              <button class="button button-block icon-left ion-social-facebook social-button facebook-button" ng-click="doLogIn()">
+              <button class="button button-block icon-left ion-social-facebook social-button facebook-button"
+                      ng-click="doLogIn()">
                 <span class="inner-text">Log in via Facebook</span>
               </button>
               <!--<button class="button button-block icon-left ion-social-googleplus social-button google-button" ng-click="doLogIn()">
@@ -37,7 +38,8 @@
               </div>
               <button class="button action-button button-block button-balanced" ng-click="doLogIn()">LOGIN</button>
               <div class="col alt-actions-container">
-                <a class="button button-clear button-small button-stable forgot-password-button" ui-sref="">Forgot Password?</a>
+                <a class="button button-clear button-small button-stable forgot-password-button" ui-sref="">Forgot
+                  Password?</a>
               </div>
             </div>
           </form>
@@ -45,7 +47,8 @@
       </div>
       <div class="row row-no-padding legal-row">
         <div class="col">
-          <p class="legal-text">By logging in your agree to AdventureMaps's <a ui-sref="">Terms of Service</a>, <a ui-sref="">Privacy Policy</a>, <a ui-sref="">Cookie Policy</a> and <a ui-sref="">Content Policies</a></p>
+          <p class="legal-text">By logging in your agree to AdventureMaps's <a ui-sref="">Terms of Service</a>, <a
+            ui-sref="">Privacy Policy</a>, <a ui-sref="">Cookie Policy</a> and <a ui-sref="">Content Policies</a></p>
         </div>
       </div>
     </div>
