--- a/www/templates/auth/signup.html
+++ b/www/templates/auth/signup.html
@@ -1,4 +1,4 @@
-<ion-view class="signup-view auth-view" cache-view="false">
+<ion-view class="signup-view auth-view" cache-view="false" hide-nav-bar="true">
   <ion-header-bar class="signup-header auth-header">
     <div class="buttons">
       <button class="button button-clear button-icon icon ion-ios-close-empty cancel-button" ng-click="cancelAuth()">
