--- a/www/css/style.css
+++ b/www/css/style.css
@@ -79,6 +79,7 @@
   transition: all .05s ease-in-out;
 }
 
+
 /*modal animation*/
 .zoom-from-center {
   -webkit-transform: translate3d(0, 0, 0) scale(0);
@@ -131,4 +132,10 @@
   flex: 0;
   display: block;
   min-width: 24px;
+/*******************
+MAP
+ *******************/
+#mapContainer {
+  width: 100%;
+  height: 100%;
 }
