Lock filter button to bottom of side menu

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -78,3 +78,17 @@
 .filters {
   transition: all .05s ease-in-out;
 }
+
+.filter-button {
+  margin-top: 0 !important;
+  min-height: 50px !important;
+  font-size: 18px !important;
+}
+
+.bar-footer-filter {
+  min-height: 60px;
+}
+
+.has-footer-filter {
+  bottom: 60px;
+}
