--- a/www/templates/auth/walkthrough.html
+++ b/www/templates/auth/walkthrough.html
@@ -81,7 +81,7 @@
         </a>
       </div>
       <div class="col">
-        <a class="button button-block auth-button" ng-click="goToLogin()">
+        <a class="button button-block auth-button" ui-sref="intro.login">
           LOGIN
         </a>
       </div>
