--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -13,12 +13,9 @@
           <div class="row social-buttons-row">
             <div class="col">
               <button class="button button-block icon-left ion-social-facebook social-button facebook-button"
-                      ng-click="doLogIn()">
+                      ng-click="facebookSignIn()">
                 <span class="inner-text">Log in via Facebook</span>
               </button>
-              <!--<button class="button button-block icon-left ion-social-googleplus social-button google-button" ng-click="doLogIn()">
-                <span class="inner-text">Log in via Google</span>
-              </button>-->
             </div>
           </div>
           <form class="row form-container" novalidate>
@@ -29,16 +26,16 @@
                 </div>
                 <label class="item item-input item-stacked-label">
                   <span class="input-label">Email</span>
-                  <input type="email" placeholder="required">
+                  <input type="email" placeholder="required" ng-model="credentials.email">
                 </label>
                 <label class="item item-input item-stacked-label">
                   <span class="input-label">Password</span>
-                  <input type="password" placeholder="required">
+                  <input type="password" placeholder="required" ng-model="credentials.password">
                 </label>
               </div>
-              <button class="button action-button button-block button-balanced" ng-click="doLogIn()">LOGIN</button>
+              <button class="button action-button button-block button-balanced" ng-click="login()">LOGIN</button>
               <div class="col alt-actions-container">
-                <a class="button button-clear button-small button-stable forgot-password-button" ui-sref="">Forgot
+                <a class="button button-clear button-small button-stable forgot-password-button">Forgot
                   Password?</a>
               </div>
             </div>
@@ -47,8 +44,12 @@
       </div>
       <div class="row row-no-padding legal-row">
         <div class="col">
-          <p class="legal-text">By logging in your agree to AdventureMaps's <a ui-sref="">Terms of Service</a>, <a
-            ui-sref="">Privacy Policy</a>, <a ui-sref="">Cookie Policy</a> and <a ui-sref="">Content Policies</a></p>
+          <p class="legal-text">
+            By logging in your agree to AdventureMaps's
+            <a ui-sref="#">Terms of Service</a>,
+            <a ui-sref="#">Privacy Policy</a>,
+            <a ui-sref="#">Cookie Policy</a> and
+            <a ui-sref="#">Content Policies</a></p>
         </div>
       </div>
     </div>
