--- a/www/templates/auth/walkthrough.html
+++ b/www/templates/auth/walkthrough.html
@@ -1,7 +1,7 @@
 <ion-view class="walkthrough-view" cache-view="false" hide-nav-bar="true">
   <ion-header-bar class="intro-header">
     <div class="buttons">
-      <button class="button button-clear skip-button" ng-click="skipIntro()">Skip Login</button>
+      <button class="button button-clear skip-button" ng-click="skipIntro()">Skip Intro</button>
     </div>
   </ion-header-bar>
   <ion-content class="intro-content" has-bouncing="false">
