--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -9,15 +9,17 @@
   height: 100px;
 }
 
-.item h2 {
-  font-size: 120%;
-  font-weight: bold;
-}
+.item {
+  h2 {
+    font-size: 120%;
+    font-weight: bold;
+  }
 
-.item h3 {
-  font-size: 110%;
-  font-weight: bold;
-  color: #ffffff;
+  h3 {
+    font-size: 110%;
+    font-weight: bold;
+    color: #ffffff;
+  }
 }
 
 .gray {
@@ -62,11 +64,11 @@
   width: 50px;
   height: 50px;
   overflow: hidden;
-}
 
-.profile-picture img {
-  width: 50px;
-  border-radius: 100%;
+  img {
+    width: 50px;
+    border-radius: 100%;
+  }
 }
 
 .profile-name {
