--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -14,6 +14,6 @@
       </ion-item>
 
     </div>
-    <button class="button button-block button-positive" ng-controller="userSessionController" ng-click="performSignOut()">Log out</button>
+    <button class="button button-block button-positive" ng-controller="authController" ng-click="performSignOut()">Log out</button>
   </ion-content>
 </ion-view>
