--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -2,5 +2,11 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <div id="mapContainer"></div>
+  <div id="map-container"></div>
+
+
+  <div id="over_map">
+
+  </div>
+
 </ion-view>
