--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -6,7 +6,8 @@
 
 
   <div id="over_map">
-
+    <button class="button button-small button-assertive" ng-click="startTracking()">Start</button>
+    <button class="button button-small button-assertive" ng-click="stopTracking()">Stop</button>
   </div>
 
 </ion-view>
