WIP moving functionality to service. Not clear if structure is okay

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -6,8 +6,8 @@
 
 
   <div id="over_map">
-    <button class="button button-small button-assertive" ng-click="startTracking()">Start</button>
-    <button class="button button-small button-assertive" ng-click="stopTracking()">Stop</button>
+    <button class="button button-small button-assertive" id="start-tracking">Start</button>
+    <button class="button button-small button-assertive" id="stop-tracking">Stop</button>
   </div>
 
 </ion-view>
