--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -15,5 +15,11 @@
 
     </div>
     <button class="button button-block button-positive" ng-controller="authController" ng-click="performSignOut()">Log out</button>
+    <ion-list ng-if="files">
+      <ion-item ng-repeat="file in files">
+        {{file.fileName}}
+        <p>{{file.date}}</p>
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-view>
