Update styling on filter button

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -41,4 +41,4 @@ For example, you might change some of the default colors:
 @import "scss/auth/signup.styles";
 
 // Previous stylesheet
-// @import "old-styles.scss";
+ @import "old-styles.scss";
