Use slider to display multiple images on activity detail page

--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -80,3 +80,8 @@
 .filters {
   transition: all .05s ease-in-out;
 }
+
+// The height of the profile image slider.
+.slider-slide {
+  height: 300px;
+}
