--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -40,7 +40,7 @@
             <i class="icon ion-person card-bottom"></i>
             <p>Follow</p>
           </div>
-          <div class='col'>
+          <div class='col' ng-click="makeComment(activity.id)">
             <i class="icon ion-chatboxes card-bottom"></i>
             <p>Comments</p>
           </div>
