--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -55,6 +55,10 @@
   margin-top: 10px;
 }
 
+/*****************
+PROFILE
+ */
+
 .profile-item {
   text-align: center;
 }
@@ -168,3 +172,20 @@ FILTERS
     color: #fff;
   }
 }
+
+/**************
+COMMENTS
+ */
+.comment-list {
+  .item-divider {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    min-height: 70px;
+    background-color: #f5f5f5;
+    color: #222;
+    font-weight: 500;
+  }
+}
+  .float-left {
+    float: left;
+  }
