--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -51,8 +51,12 @@
             <p>Follow</p>
           </div>
           <div class='col' ng-click="makeComment(activity.id)">
-            <i class="icon ion-chatboxes card-bottom"></i>
-            <p>Comments</p>
+            <span class="count-icon">
+              <i class="icon ion-chatboxes card-bottom"></i>
+              <!-- this needs to be activity.comment_count -->
+              <span class="count-span">{{activity.comments_count}}</span>
+              <p>Comments</p>
+            </span>
           </div>
         </div>
       </div>
