Consume comments information and repeat on comment cards

--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -50,10 +50,9 @@
             <i class="icon ion-person card-bottom"></i>
             <p>Follow</p>
           </div>
-          <div class='col' ng-click="makeComment(activity.id)">
+          <div class='col'>
             <span class="count-icon">
               <i class="icon ion-chatboxes card-bottom"></i>
-              <!-- this needs to be activity.comment_count -->
               <span class="count-span">{{activity.comments_count}}</span>
               <p>Comments</p>
             </span>
