--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -55,16 +55,13 @@
         </div>
       </div>
     </div>
-    <div class="list card comment-list" ng-repeat="comment in activity.comments">
-      <div class="item item-divider item-avatar">
-        <img class="float-left"
-             ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
-        <h2 class="activity_title">{{comment.user.name}}</h2>
-        <span>{{comment.created_at}}</span>
-      </div>
-      <div class="item item-text-wrap">
+    <div class="comment-list" ng-repeat="comment in activity.comments">
+        <div class="comment-user">{{comment.user.name}}:</div>
+
+      <div class="comment-body">
         {{comment.body}}
       </div>
+      <div class="comment-date">{{comment.created_at}}</div>
     </div>
 
   </ion-content>
