Display follow count on activities page

--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -215,6 +215,10 @@ COMMENTS
   border-radius: 8px;
   text-align: center;
 }
+.count-span-follow {
+  right: 2px;
+}
+
 
 .comment-user {
   padding-top: 10px;
