--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -47,8 +47,11 @@
             <p>Recommend</p>
           </div>
           <div class='col'>
-            <i class="icon ion-person card-bottom"></i>
+            <span class="count-icon">
+              <i class="icon ion-person card-bottom"></i>
+            <span class="count-span count-span-follow">{{activity.user.followers_count}}</span>
             <p>Follow</p>
+            </span>
           </div>
           <div class='col'>
              <span class="count-icon">
