Refresh modal after comments

--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -14,7 +14,7 @@
         <p ng-repeat="interest in activity.user.interests">
           <i class="mybadge badge-royal">{{interest.name}}</i>
         </p>
-        <p>{{activity.created_at}}</p>
+        <!--<p>{{activity.created_at}}</p> Not available from the API endpoint yet -->
       </div>
       <div class="item item-body gray">
         <span>{{activity.category}}</span>, <span>{{activity.difficulty}}</span>
