add back button and content to policies templates

--- a/www/templates/policies/cookies.html
+++ b/www/templates/policies/cookies.html
@@ -1,5 +1,22 @@
-<ion-view>
-  <ion-content>
-    <div class="">Cookies Policy</div>
+<ion-view class="auth-view" hide-nav-bar="true">
+
+  <ion-header-bar class="signup-header auth-header">
+    <div class="buttons">
+        <button class="button icon-left ion-chevron-left button-clear button-dark" ng-click="back()">
+        </button>
+    </div>
+    <h3 class="title">Cookies Policy</h3>
+  </ion-header-bar>
+
+  <ion-content class="auth-content">
+    <h1>Content</h1>
+    <p>
+        Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
+        Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
+    </p>
+    <p>
+        Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
+        Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
+    </p>
   </ion-content>
 </ion-view>
