--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -50,9 +50,9 @@
           <p class="legal-text">
             By logging in your agree to AdventureMaps's
             <a ui-sref="intro.terms">Terms of Service</a>,
-            <a ui-sref="#">Privacy Policy</a>,
-            <a ui-sref="#">Cookie Policy</a> and
-            <a ui-sref="#">Content Policies</a></p>
+            <a ui-sref="intro.privacy">Privacy Policy</a>,
+            <a ui-sref="intro.cookie">Cookie Policy</a> and
+            <a ui-sref="intro.content">Content Policies</a></p>
         </div>
       </div>
     </div>
